fix: remove dark mode in blog page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,7 +119,7 @@
 * {
   font-family: "Aeonik", sans-serif;
   font-style: normal;
-  color: #163300;
+  /* color: #163300; */
 }
 
 html,
